Error link not showing in address bar fixed

--- a/css/main.css
+++ b/css/main.css
@@ -167,12 +167,11 @@
     transition-duration: 0.2s;
     transition-property: background-color, transform;
     padding: 0 3px;
-    cursor: pointer;
     border-radius: 5px;
 }
 
 #main .plink:hover {
-    background: var(--p-link-hover);
+    background: linear-gradient(90deg, #b549f833 40%, #246bf733);
     -webkit-background-clip: unset;
     -webkit-text-fill-color: unset;
 }
@@ -184,7 +183,7 @@
 }
 
 #main .plinkR:hover {
-    background: var(--p-link-hover);
+    background: linear-gradient(-90deg, #b549f833 40%, #246bf733);
     -webkit-background-clip: unset;
     -webkit-text-fill-color: unset;
 }
